@@ -140,6 +140,11 @@ namespace itpp {
     fixrep re;
   };
 
+  //! Check that x.shift==y.shift OR x==0 OR y==0 and return the shift (for the non-zero argument)
+  int assert_shifts(const Fix &x, const Fix &y);
+  //! Check that x.shift==0 OR x==0 OR y==0 and return x.shift
+  int assert_shifts(const Fix &x, int y);
+
   //! Input bit representation and, optionally, the shift
   std::istream &operator>>(std::istream &is, Fix &x);
   //! Output bit representation and, optionally, the shift
