@@ -11,7 +11,7 @@
  * IT++ - C++ library of mathematical, signal processing, speech processing,
  *        and communications classes and functions
  *
- * Copyright (C) 1995-2006  (see AUTHORS file for a list of contributors)
+ * Copyright (C) 1995-2007  (see AUTHORS file for a list of contributors)
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -79,9 +79,10 @@ namespace itpp {
   };
 
   //!@}
-
-  // Typedefs for Fixed
+  
+  //! Typedefs for Fixed (fixed1, fixed2, ..., fixed64)
   typedef Fixed<1, TC, WRAP> fixed1;
+#ifndef DOXYGEN_SHOULD_SKIP_THIS
   typedef Fixed<2, TC, WRAP> fixed2;
   typedef Fixed<3, TC, WRAP> fixed3;
   typedef Fixed<4, TC, WRAP> fixed4;
@@ -145,9 +146,11 @@ namespace itpp {
   typedef Fixed<62, TC, WRAP> fixed62;
   typedef Fixed<63, TC, WRAP> fixed63;
   typedef Fixed<64, TC, WRAP> fixed64;
+#endif
 
-  // Typedefs for unsigned Fixed
+  //! Typedefs for unsigned Fixed (ufixed1, ufixed2, ..., ufixed64)
   typedef Fixed<1, US, WRAP> ufixed1;
+#ifndef DOXYGEN_SHOULD_SKIP_THIS
   typedef Fixed<2, US, WRAP> ufixed2;
   typedef Fixed<3, US, WRAP> ufixed3;
   typedef Fixed<4, US, WRAP> ufixed4;
@@ -211,9 +214,11 @@ namespace itpp {
   typedef Fixed<62, US, WRAP> ufixed62;
   typedef Fixed<63, US, WRAP> ufixed63;
   typedef Fixed<64, US, WRAP> ufixed64;
+#endif
 
-  // Typedefs for saturated Fixed
+  //! Typedefs for saturated Fixed (sfixed1, sfixed2, ..., sfixed64)
   typedef Fixed<1, TC, SAT> sfixed1;
+#ifndef DOXYGEN_SHOULD_SKIP_THIS
   typedef Fixed<2, TC, SAT> sfixed2;
   typedef Fixed<3, TC, SAT> sfixed3;
   typedef Fixed<4, TC, SAT> sfixed4;
@@ -277,9 +282,11 @@ namespace itpp {
   typedef Fixed<62, TC, SAT> sfixed62;
   typedef Fixed<63, TC, SAT> sfixed63;
   typedef Fixed<64, TC, SAT> sfixed64;
+#endif
 
-  // Typedefs for saturated unsigned Fixed
+  //! Typedefs for saturated unsigned Fixed (sufixed1, sufixed2, ..., sufixed64)
   typedef Fixed<1, US, SAT> sufixed1;
+#ifndef DOXYGEN_SHOULD_SKIP_THIS
   typedef Fixed<2, US, SAT> sufixed2;
   typedef Fixed<3, US, SAT> sufixed3;
   typedef Fixed<4, US, SAT> sufixed4;
@@ -343,6 +350,7 @@ namespace itpp {
   typedef Fixed<62, US, SAT> sufixed62;
   typedef Fixed<63, US, SAT> sufixed63;
   typedef Fixed<64, US, SAT> sufixed64;
+#endif
 
 #ifndef _MSC_VER
   // Template instantiations
