@@ -1,5 +1,9 @@
 2007-02-08  Adam Piatyszek  <ediap@users.sourceforge.net>
 
+	* itpp/fixed/cfixed.h, itpp/fixed/cfix.h, itpp/fixed/fix_base.h,
+	itpp/fixed/fixed.h, itpp/fixed/fix_factory.h, itpp/fixed/fix.h:
+	Fixed Doxygen warnings by adding or correcting the documentation
+	
 	* configure.ac, Makefile.am: "upload" target removed
 
 	* doc/doxygen_html.cfg.in, itpp/comm/ldpc.cpp, itpp/comm/llr.h,
